--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -23,14 +23,25 @@
         
         <section class="button-container">
             <div id="grid-container">
-            <!-- Sample grid items -->
-                <div class="grid-item" data-id="1">Cube</div>
-                <div class="grid-item" data-id="2">Sphere</div>
-                <div class="grid-item" data-id="3">Cone</div>
-                <div class="grid-item" data-id="4">Cylinder</div>
-                <div class="grid-item" data-id="5">Torus</div>
-                <div class="grid-item" data-id="6">Pyramid</div>
-            </div>
+                <!-- Sample grid items with images -->
+                <div class="grid-item" data-id="1">
+                    <img src="" alt="Cube" />
+                </div>
+                <div class="grid-item" data-id="2">
+                    <img src="" alt="Sphere" />
+                </div>
+                <div class="grid-item" data-id="3">
+                    <img src="" alt="Cone" />
+                </div>
+                <div class="grid-item" data-id="4">
+                    <img src="" alt="Cylinder" />
+                </div>
+                <div class="grid-item" data-id="5">
+                    <img src="" alt="Torus" />
+                </div>
+                <div class="grid-item" data-id="6">
+                    <img src="" alt="Pyramid" />
+                </div>
             <button id="download-button">
                 <i class="fa-solid fa-download" style="font-size: 20px;"></i>
                 Download OBJ</button>
