--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -1,4 +1,6 @@
 {% extends 'basenav.html' %}
+
+{% load static %}
 {% block content %}
     <div id="container">
         <section id="section-one">
@@ -25,22 +27,22 @@
             <div id="grid-container">
                 <!-- Sample grid items with images -->
                 <div class="grid-item" data-id="1">
-                    <img src="" alt="Cube" />
+                    <img src="{% static 'Cube.png' %}" alt="Cube" />
                 </div>
                 <div class="grid-item" data-id="2">
-                    <img src="" alt="Sphere" />
+                    <img src="{% static 'Sphere.png' %}" alt="Sphere" />
                 </div>
                 <div class="grid-item" data-id="3">
-                    <img src="" alt="Cone" />
+                    <img src="{% static 'Cone.png' %}" alt="Cone" />
                 </div>
                 <div class="grid-item" data-id="4">
-                    <img src="" alt="Cylinder" />
+                    <img src="{% static 'Cylinder.png' %}" alt="Cylinder" />
                 </div>
                 <div class="grid-item" data-id="5">
-                    <img src="" alt="Torus" />
+                    <img src="{% static 'Torus.png' %}" alt="Torus" />
                 </div>
                 <div class="grid-item" data-id="6">
-                    <img src="" alt="Pyramid" />
+                    <img src="{% static 'Pyramid.png' %}" alt="Pyramid" />
                 </div>
             <button id="download-button">
                 <i class="fa-solid fa-download" style="font-size: 20px;"></i>
@@ -543,7 +545,7 @@
             grid-template-rows: repeat(3, 1fr); /* Optional: explicitly set 3 rows */
             gap: 20px; /* Space between grid items */
             padding: 20px;
-            background-color: #04471C;
+            background-color: #0ab947;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             height: 400px;
             overflow-y: auto;
@@ -551,7 +553,7 @@
         }
         .grid-item {
             background-color: #eaeaea;
-            border: 1px solid #04471C; /* Corrected border syntax */
+            border: 1px solid #048531; /* Corrected border syntax */
             height: 100px;
             display: flex;
             justify-content: center;
@@ -559,6 +561,16 @@
             font-weight: bold;
             color: #333;
             border-radius: 5px; /* Add this line for border radius */
+        }
+        .grid-item img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 5px;
+        }
+        .grid-item:hover {
+            background-color: #f0f0f0;
+            cursor: pointer;
         }
     </style>
 {% endblock %}
